<resources>
    <string name="app_name">StreetLife</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">계정이 없으신가요? 가입하기</string>
    <string name="click_sign_up">가입하기</string>
    <string name="cancel_sign_up">취소</string>

    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="add_spot">스팟 추가</string>
    <string name="favorite_alarm">좋아요</string>
    <string name="action_account">내 계정</string>

    <string name="upload">올리기</string>
    <string name="short_review">숏 리뷰 작성(최대 150자)</string>
    <string name="spot_title">장소명 입력(최대 30자)</string>
    <string name="write_spot_title">장소명</string>
    <string name="image_upload">사진 추가</string>
    <string name="write_review">숏 리뷰</string>
    <string name="spot_upload_success">스팟이 추가되었습니다.</string>

    <string name="map">지도</string>

</resources>
