<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_layout"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo_streetlife" />

    <LinearLayout
        android:id="@+id/sign_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"
             />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword"
             />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorTransparent"
            android:text="@string/sign_up" />
    </LinearLayout>
</RelativeLayout>